tests/cases/standard-library/errors/boxed/std-boxed-put-in-untracked.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var boxed = std::boxed::Box<i64> { data: 0u64 as ptr i64 };

  boxed.put_in(ref mut zone, 21);
  return boxed.get();
}
